--- a/styles/reset.css
+++ b/styles/reset.css
@@ -4,10 +4,8 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
   box-sizing: border-box;
+  font-family: inherit;
 }
 
 article,
@@ -49,4 +47,8 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+a {
+  text-decoration: none;
 }
