--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
-  --orange: #ea640c;
-  --green: #393;
+  --brand: #ff856d;
   --grey: #f3f3f3;
+  --text: #101010;
+  --text-grey: #0f0f0f50;
 }
