--- a/components/header/mobile-menu.css
+++ b/components/header/mobile-menu.css
@@ -1,11 +1,11 @@
 #mobile-menu {
   position: absolute;
-  top: 100%;
+  top: calc(100% + 0.0625rem);
   left: 0;
   right: 0;
   height: 100vh;
   background-color: #fff;
-  transition: translate 0.75s;
+  transition: all 0.75s;
   padding: 0.625rem 1.25rem 4.0625rem;
 }
 
@@ -15,4 +15,11 @@
 
 #main-header[data-show="true"] #mobile-menu {
   translate: calc(0);
+}
+
+@media screen and (min-width: 992px) {
+  #mobile-menu {
+    width: 20%;
+    display: none;
+  }
 }
