added raw header menu

--- a/components/header/main-menu.css
+++ b/components/header/main-menu.css
@@ -1,5 +1,5 @@
 #main-menu {
-  padding: 0.625rem;
+  padding: 0.625rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
