--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,10 @@
 @import url("../styles/reset.css");
 @import url("../styles/variables.css");
 
+html {
+  font-size: 14px;
+}
+
 body {
   color: var(--text);
 }
@@ -18,4 +22,26 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: var(--font-2xl);
+}
+
+h2 {
+  font-size: var(--font-xl);
+}
+
+h3 {
+  font-size: var(--font-lg);
+}
+
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 16px;
+  }
 }
