--- a/components/header/top-menu.css
+++ b/components/header/top-menu.css
@@ -1,7 +1,6 @@
 #top-menu {
   background-color: #000;
-  height: 2rem;
-  width: 100%;
+  height: 2.5rem;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -12,7 +11,8 @@
 #top-menu a {
   color: #fff;
   text-decoration: underline;
-  font-size: 12px;
+  font-size: var(--font-sm);
+  font-weight: 500;
 }
 
 #main-header[data-show="false"] #top-menu {
@@ -20,5 +20,5 @@
 }
 
 #main-header[data-show="true"] #top-menu {
-  margin-top: -2rem;
+  margin-top: -2.5rem;
 }
